--- a/CSS/CSS-Intro.css
+++ b/CSS/CSS-Intro.css
@@ -28,3 +28,13 @@ h2 {
   font-family: Fantasy, Geneva, Tahoma, sans-serif; /* fall back, if no verdana installed, use geneva, and so on */
   text-transform: uppercase; /* uppercase */
 }
+/* exercise: */
+h1 {
+  text-transform: uppercase;
+  font-family: monospace;
+  text-align: center;
+  font-weight: 100;
+  font-size: 40px;
+  letter-spacing: 20px;
+  text-decoration: plum underline wavy;
+}
