--- a/JavaScript/JS-Express/templating/views/home.ejs
+++ b/JavaScript/JS-Express/templating/views/home.ejs
@@ -7,7 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Home Page</h1>
+    <h1>Home Page <%= 1+3+5 %></h1>
     <p>
       Chinchillas are clean, quiet and attractive rodents that don't smell. They
       can live for 10-20 years, and they've been bred and farmed for their soft,
