--- a/JavaScript/JS-Express/RESTDemo/views/comments/index.ejs
+++ b/JavaScript/JS-Express/RESTDemo/views/comments/index.ejs
@@ -17,5 +17,7 @@
       </li>
       <% } %>
     </ul>
+    <!-- Make a link, send back to new submit page -->
+    <h3>Click <a href="/comments/new">here</a> to make new comments</h3>
   </body>
 </html>
