authDemo added middleware fn

--- a/JavaScript/Authentication/AuthDemo/views/login.ejs
+++ b/JavaScript/Authentication/AuthDemo/views/login.ejs
@@ -29,5 +29,13 @@
       </div>
       <button>Login</button>
     </form>
+
+    <form action="/register">
+      <div>
+        <p>
+          Do not have an account? <span><button>Sign Up</button></span>
+        </p>
+      </div>
+    </form>
   </body>
 </html>
